# croak

./: .gitignore  CONTRIBUTING.md  LICENSE  Makefile  PLAN-vfrog-cli-integration.md  README.md  SCAN_COMMAND_STATUS.md  install.ps1  install.sh  pyproject.toml  setup.py
.croak/: config.yaml  pipeline-state.yaml
agents/data/: data.agent.yaml  prompts.md
agents/deployment/: deployment.agent.yaml  prompts.md
agents/evaluation/: evaluation.agent.yaml  prompts.md
agents/router/: prompts.md  router.agent.yaml
agents/training/: prompts.md  training.agent.yaml
docs/: PLAN-vfrog-cli-integration.md  agents.md  api-reference.md  claude-code-integration.md  getting-started.md  slash-commands.md  workflows.md
examples/retail-detection/: README.md
examples/retail-detection/.croak/: config.yaml
installer/: .eslintrc.cjs  .npmignore  LICENSE  README.md  TESTING.md  package-lock.json  package.json  platform-codes.yaml  test-commands.sh
installer/src/: index.js
installer/src/commands/: doctor.js  init.js  upgrade.js
installer/src/utils/: agent-compiler.js  claude-md-generator.js  command-generator.js  ide-setup.js  python-check.js  template-copy.js  vfrog-setup.js
installer/templates/: .gitignore.tmpl  CLAUDE.md.tmpl  config.yaml.tmpl  pipeline-state.yaml.tmpl
installer/templates/agents/: data.agent.yaml  deployment.agent.yaml  evaluation.agent.yaml  router.agent.yaml  training.agent.yaml
installer/templates/claude-code/: agent-command.md.tmpl  workflow-command.md.tmpl
installer/templates/contracts/: data-handoff.schema.yaml  training-handoff.schema.yaml
knowledge/: README.md
knowledge/architectures/: architecture-selection.md  yolo-family.md
knowledge/data/: annotation-formats.md  data-quality-checklist.md
knowledge/deployment/: edge-deployment.md  export-formats.md  vfrog-guide.md
knowledge/evaluation/: detection-metrics.md  performance-debugging.md
knowledge/gpu-setup/: gpu-setup-modal.md
knowledge/routing/: agent-capabilities.md  common-workflows.md  error-recovery.md  pipeline-stages.md  request-patterns.md
knowledge/training/: common-training-issues.md  hyperparameter-guide.md
knowledge/troubleshooting/: data-issues.md  training-failures.md
src/croak/: __init__.py  __main__.py  cli.py
tests/: __init__.py  test_agents.py  test_config.py  test_contracts.py  test_data.py  test_security.py  test_state.py  test_vfrog_cli.py  test_workflows.py
workflows/data-preparation/: checklist.md
workflows/model-training/: workflow.yaml
(+46 files in other folders)
